--- a/00_module/hello-spring/src/main/resources/application.properties
+++ b/00_module/hello-spring/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=hello-spring
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
